[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["smol"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
# iced_native = "0.3"
# druid = "0.7.0"
